--- a/api.html
+++ b/api.html
@@ -1,10 +1,11 @@
+<!-- api.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>PC28 API</title>
   <script>
-    // 假设我们已经抓取到了数据
+    // 模拟从 data.json 获取数据
     const data = {
       issue: "3370250",
       numbers: [3, 8, 4],
